--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,14 @@
         <input type="number" id="meterReading" name="meterReading" required>
         <button type="submit">Speichern</button>
     </form>
+
+    <!-- Canvas-Element für das Diagramm -->
+    <h2>Zählerstand-Verlauf</h2>
+    <canvas id="gasChart" width="400" height="200"></canvas>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
+        // Event Listener für das Formular
         document.getElementById('gasForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const meterReading = document.getElementById('meterReading').value;
@@ -25,9 +32,55 @@
                 body: JSON.stringify({ reading: meterReading }),
             })
             .then(response => response.text())
-            .then(data => alert(data))
+            .then(data => {
+                alert(data);
+                // Daten nach dem Speichern neu laden und das Diagramm aktualisieren
+                loadDataAndDisplayChart();
+            })
             .catch(error => console.error('Fehler:', error));
         });
+
+        // Funktion zum Laden der Daten und Anzeigen im Diagramm
+        function loadDataAndDisplayChart() {
+            fetch('/get-readings')
+                .then(response => response.json())
+                .then(data => {
+                    const timestamps = data.map(entry => new Date(entry.timestamp).toLocaleString());
+                    const readings = data.map(entry => entry.reading);
+
+                    const ctx = document.getElementById('gasChart').getContext('2d');
+                    new Chart(ctx, {
+                        type: 'line',
+                        data: {
+                            labels: timestamps,
+                            datasets: [{
+                                label: 'Gaszählerstände',
+                                data: readings,
+                                borderWidth: 1,
+                                fill: false
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                x: {
+                                    type: 'category',
+                                    time: {
+                                        unit: 'day'
+                                    }
+                                },
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                })
+                .catch(error => console.error('Fehler beim Laden der Daten:', error));
+        }
+
+        // Daten laden und Diagramm anzeigen, wenn die Seite geladen wird
+        window.onload = loadDataAndDisplayChart;
     </script>
 </body>
 </html>
+
