--- a/public/index.html
+++ b/public/index.html
@@ -58,18 +58,19 @@
             box-sizing: border-box;
         }
 
-        canvas {
-            width: 100%;
-            max-width: 400px;
-            height: 200px; /* Feste Höhe, um Platz zu sparen */
-            background-color: white;
-            border-radius: 8px;
-            box-sizing: border-box;
-        }
-
         .chart-container {
             width: 100%;
             max-width: 400px;
+            height: 300px; /* Feste Höhe für den Container */
+            position: relative;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%; /* Passt die Höhe des Canvas an die Container-Höhe an */
+            background-color: white;
+            border-radius: 8px;
+            box-sizing: border-box;
         }
     </style>
 </head>
