--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,19 @@
                 .then(response => response.json())
                 .then(data => {
                     const lastEntries = data.slice(-10);
-                    const timestamps = lastEntries.map(entry => new Date(entry.timestamp).toLocaleString());
+
+                    // Funktion zur Formatierung des Datums im gewünschten Format
+                    function formatDate(timestamp) {
+                        const date = new Date(timestamp);
+                        const day = String(date.getDate()).padStart(2, '0');
+                        const month = String(date.getMonth() + 1).padStart(2, '0'); // Monate sind 0-basiert
+                        const year = String(date.getFullYear()).slice(-2);
+                        const hours = String(date.getHours()).padStart(2, '0');
+                        const minutes = String(date.getMinutes()).padStart(2, '0');
+                        return `${day}.${month}.${year}, ${hours}:${minutes}`;
+                    }
+
+                    const timestamps = lastEntries.map(entry => formatDate(entry.timestamp));
                     const readings = lastEntries.map(entry => entry.reading);
 
                     const ctx = document.getElementById('gasChart').getContext('2d');
