--- a/public/index.html
+++ b/public/index.html
@@ -127,19 +127,29 @@
 
                     const timestamps = lastEntries.map(entry => formatDate(entry.timestamp));
                     const readings = lastEntries.map(entry => entry.reading);
+                    const forecastValues = lastEntries.map(() => 7); // Soll-Werte auf 7 setzen
 
                     const ctx = document.getElementById('gasChart').getContext('2d');
                     new Chart(ctx, {
                         type: 'bar',
                         data: {
                             labels: timestamps,
-                            datasets: [{
-                                label: 'Gaszählerstände',
-                                data: readings,
-                                backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                                borderColor: 'rgba(54, 162, 235, 1)',
-                                borderWidth: 1
-                            }]
+                            datasets: [
+                                {
+                                    label: 'Gaszählerstände (Ist)',
+                                    data: readings,
+                                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                                    borderColor: 'rgba(54, 162, 235, 1)',
+                                    borderWidth: 1
+                                },
+                                {
+                                    label: 'Prognose (Soll)',
+                                    data: forecastValues,
+                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                    borderColor: 'rgba(255, 99, 132, 1)',
+                                    borderWidth: 1
+                                }
+                            ]
                         },
                         options: {
                             responsive: true,
