--- a/public/index.html
+++ b/public/index.html
@@ -58,19 +58,28 @@
             box-sizing: border-box;
         }
 
-        .chart-container {
+        .table-container {
             width: 100%;
-            max-width: 400px;
-            height: 300px; /* Feste Höhe für den Container */
-            position: relative;
+            max-width: 600px;
+            margin-top: 20px;
+            overflow-y: auto;
         }
 
-        canvas {
+        table {
             width: 100%;
-            height: 100%; /* Passt die Höhe des Canvas an die Container-Höhe an */
+            border-collapse: collapse;
             background-color: white;
-            border-radius: 8px;
-            box-sizing: border-box;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #007BFF;
+            color: white;
         }
     </style>
 </head>
@@ -82,12 +91,22 @@
         <button type="submit">Speichern</button>
     </form>
 
-    <div class="chart-container">
+    <div class="table-container">
         <h2>Zählerstand-Verlauf</h2>
-        <canvas id="gasChart"></canvas>
+        <table id="readingsTable">
+            <thead>
+                <tr>
+                    <th>Datum</th>
+                    <th>Ist-Wert</th>
+                    <th>Soll-Wert</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Zeilen werden dynamisch hier eingefügt -->
+            </tbody>
+        </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         document.getElementById('gasForm').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -108,78 +127,41 @@
             .catch(error => console.error('Fehler:', error));
         });
 
-        function loadDataAndDisplayChart() {
+        function loadDataAndDisplayTable() {
             fetch('/get-readings')
                 .then(response => response.json())
                 .then(data => {
                     const lastEntries = data.slice(-10);
+                    const tableBody = document.querySelector('#readingsTable tbody');
+                    tableBody.innerHTML = ''; // Löscht vorherige Einträge
 
-                    // Funktion zur Formatierung des Datums im gewünschten Format
-                    function formatDate(timestamp) {
-                        const date = new Date(timestamp);
-                        const day = String(date.getDate()).padStart(2, '0');
-                        const month = String(date.getMonth() + 1).padStart(2, '0'); // Monate sind 0-basiert
-                        const year = String(date.getFullYear()).slice(-2);
-                        const hours = String(date.getHours()).padStart(2, '0');
-                        const minutes = String(date.getMinutes()).padStart(2, '0');
-                        return `${day}.${month}.${year}, ${hours}:${minutes}`;
-                    }
+                    lastEntries.forEach(entry => {
+                        const row = document.createElement('tr');
+                        const dateCell = document.createElement('td');
+                        const readingCell = document.createElement('td');
+                        const forecastCell = document.createElement('td');
 
-                    const timestamps = lastEntries.map(entry => formatDate(entry.timestamp));
-                    const readings = lastEntries.map(entry => parseFloat(entry.reading).toFixed(3));
-                    const forecastValues = lastEntries.map(() => 7.000); // Soll-Werte auf 7.000 setzen
+                        // Datum formatieren
+                        const date = new Date(entry.timestamp);
+                        const formattedDate = `${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${String(date.getFullYear()).slice(-2)}, ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
 
-                    const ctx = document.getElementById('gasChart').getContext('2d');
-                    new Chart(ctx, {
-                        type: 'bar',
-                        data: {
-                            labels: timestamps,
-                            datasets: [
-                                {
-                                    label: 'Gaszählerstände (Ist)',
-                                    data: readings,
-                                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                                    borderColor: 'rgba(54, 162, 235, 1)',
-                                    borderWidth: 1
-                                },
-                                {
-                                    label: 'Prognose (Soll)',
-                                    data: forecastValues,
-                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                                    borderColor: 'rgba(255, 99, 132, 1)',
-                                    borderWidth: 1
-                                }
-                            ]
-                        },
-                        options: {
-                            responsive: true,
-                            maintainAspectRatio: false,
-                            scales: {
-                                x: {
-                                    type: 'category',
-                                    title: {
-                                        display: true,
-                                        text: 'Zeitpunkt'
-                                    }
-                                },
-                                y: {
-                                    beginAtZero: true,
-                                    title: {
-                                        display: true,
-                                        text: 'Zählerstand'
-                                    }
-                                }
-                            },
-                            animation: {
-                                duration: 0
-                            }
-                        }
+                        // Soll-Wert immer auf 7.000 setzen
+                        const forecastValue = 7.000;
+
+                        dateCell.textContent = formattedDate;
+                        readingCell.textContent = parseFloat(entry.reading).toFixed(3);
+                        forecastCell.textContent = forecastValue.toFixed(3);
+
+                        row.appendChild(dateCell);
+                        row.appendChild(readingCell);
+                        row.appendChild(forecastCell);
+                        tableBody.appendChild(row);
                     });
                 })
                 .catch(error => console.error('Fehler beim Laden der Daten:', error));
         }
 
-        window.onload = loadDataAndDisplayChart;
+        window.onload = loadDataAndDisplayTable;
     </script>
 </body>
 </html>
