--- a/public/index.html
+++ b/public/index.html
@@ -135,8 +135,8 @@
 
             let timestamp;
             if (timestampInput) {
-                // Erstelle das Datum basierend auf dem datetime-local Eingabewert
-                timestamp = new Date(timestampInput);
+                // Parse den Wert des datetime-local Inputs korrekt, um Zeitzonenprobleme zu vermeiden
+                timestamp = new Date(`${timestampInput}:00.000Z`);
             } else {
                 timestamp = new Date();
             }
